--- a/index.html
+++ b/index.html
@@ -9,49 +9,58 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-            <div class="navbar-header">
-                <h1 class="display-5 name">Avinash Singh</h1>
-            </div>
-            <div>
-                <nav>
-                <a class="nav-item" href="index.html">About &nbsp</a>
-                |
-                <a class="nav-item" href="portfolio.html">&nbsp Portfolio &nbsp</a>
-                |
-                <a class="nav-item" href="contact.html">&nbsp Contact</a>
-                </nav>
-            </div>
-            </div>
-        </nav>
-    </header>
+<body class="d-flex flex-column">
+    <div class="page-content">
+        <header>
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                <div class="navbar-header">
+                    <h1 class="display-5 name">Avinash Singh</h1>
+                </div>
+                <div>
+                    <nav>
+                    <a class="nav-item" href="index.html">About &nbsp</a>
+                    |
+                    <a class="nav-item" href="portfolio.html">&nbsp Portfolio &nbsp</a>
+                    |
+                    <a class="nav-item" href="contact.html">&nbsp Contact</a>
+                    </nav>
+                </div>
+                </div>
+            </nav>
+        </header>
 
-    <div class="container-fluid main-content">
+        <div class="container-fluid">
+            <div class="main-content">
+                <!-- row 1 -->
+                <div class="row">
+                    <h1 class="display-5 about-me">About Me</h1>
+                </div>
 
-        <!-- row 1 -->
-        <div class="row">
-            <h1 class="display-5 about-me">About Me</h1>
+                <!-- row 2 -->
+                <div class="row">
+                    <img src="assets/images/Avi-200x200.jpg" class="img-fluid self-pic" alt="Avinash Singh">
+                    <p class="para1">
+                        I started programming in the 7th grade as a hobby on a tiny ZX Spectrum microcomputer 
+                        and have always loved it. The first language I learnt was "Spectrum Basic" which was a subset of Basic. I have 4 years 
+                        of development experience in C#, SQL Server, MS Access among other associated 
+                        tools like XML, SSRS etc.
+                    </p>
+
+                    <p class="para2">
+                        I am currently enrolled in the UT Austin's Web Development bootcamp and am learning exciting new technologies 
+                        like JavaScript, HTML5, CSS Bootstrap and React.js. At the completion of the bootcamp I will be able to design and deploy 
+                        websites and mobile apps. I would be looking a full-stack web developer positions.
+                    </p>
+                </div>
+            </div>
         </div>
-
-        <!-- row 2 -->
-        <div class="row">
-            <img src="assets/images/Avi-200x200.jpg" class="img-fluid self-pic" alt="Avinash Singh">
-            <p class="lead">
-                I started programming in the 7th grade as a hobby on a tiny ZX Spectrum microcomputer 
-                and have always loved it. The first language I learnt was "Spectrum Basic" which was a subset of Basic.I have 4 years 
-                of development experience in C#, SQL Server, MS Access among other associated 
-                tools like XML, SSRS etc.
-            </p>
-
-            <p class="lead">
-                I am currently enrolled in the UT Austin's Web Development bootcamp and am learning exciting new technologies 
-                like JavaScript, HTML5, CSS Bootstrap and React.js.
-            </p>
+    </div>
+    <footer>
+        <div class="container">
+        Copyright &copy; 
         </div>
-
-      </div>
+    </footer>
+    
 </body>
 </html>
