Some edits to index.html, finished portfolio.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body class="d-flex flex-column">
+<body>
     <div class="page-content">
         <header>
             <nav class="navbar navbar-inverse">
@@ -39,19 +39,22 @@
 
                 <!-- row 2 -->
                 <div class="row">
-                    <img src="assets/images/Avi-200x200.jpg" class="img-fluid self-pic" alt="Avinash Singh">
-                    <p class="para1">
-                        I started programming in the 7th grade as a hobby on a tiny ZX Spectrum microcomputer 
-                        and have always loved it. The first language I learnt was "Spectrum Basic" which was a subset of Basic. I have 4 years 
-                        of development experience in C#, SQL Server, MS Access among other associated 
-                        tools like XML, SSRS etc.
-                    </p>
+                    <div class="col-md-12"></div>
+                        <img src="assets/images/Avi-200x200.jpg" class="img-fluid self-pic" alt="Avinash Singh">
 
-                    <p class="para2">
-                        I am currently enrolled in the UT Austin's Web Development bootcamp and am learning exciting new technologies 
-                        like JavaScript, HTML5, CSS Bootstrap and React.js. At the completion of the bootcamp I will be able to design and deploy 
-                        websites and mobile apps. I would be looking a full-stack web developer positions.
-                    </p>
+                        <p>
+                            I started programming in the 7th grade as a hobby on a tiny ZX Spectrum microcomputer 
+                            and have always loved it. The first language I learnt was "Spectrum Basic" which was a subset of Basic. I have 4 years 
+                            of development experience in C#, SQL Server, MS Access among other associated 
+                            tools like XML, SSRS etc.
+                        </p>
+
+                        <p>
+                            I am currently enrolled in the UT Austin's Web Development bootcamp and am learning exciting new technologies 
+                            like JavaScript, HTML5, CSS Bootstrap and React.js. At the completion of the bootcamp I will be able to design and deploy 
+                            websites and mobile apps. I would be looking at full-stack web developer positions.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
