Finished contact.html, few styling edits

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </nav>
         </header>
 
-        <div class="container-fluid">
+        <div class="container-fluid container2">
             <div class="main-content">
                 <!-- row 1 -->
                 <div class="row">
